Stable_version/bison_code/parser.output
Terminals unused in grammar

    BOOL_LITERAL
    STRING_LITERAL
    INVALID_CHARACTER


State 23 conflicts: 1 shift/reduce, 37 reduce/reduce
State 35 conflicts: 2 shift/reduce
State 131 conflicts: 16 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: SimpleDeclaration
    2        | RoutineDeclaration
    3        | Program SimpleDeclaration
    4        | Program RoutineDeclaration

    5 SimpleDeclaration: VariableDeclaration SemicolonOrNothing
    6                  | TypeDeclaration SemicolonOrNothing

    7 SemicolonOrNothing: %empty
    8                   | SEMICOLON

    9 VariableDeclaration: VAR IDENTIFIER COLON Type
   10                    | VAR IDENTIFIER COLON Type IS Expression
   11                    | VAR IDENTIFIER IS Expression

   12 TypeDeclaration: TYPE IDENTIFIER IS Type

   13 RoutineDeclaration: ROUTINE IDENTIFIER LBRACKET Parameters RBRACKET IS Body END SemicolonOrNothing
   14                   | ROUTINE IDENTIFIER LBRACKET Parameters RBRACKET COLON Type IS Body RETURN Expression END SemicolonOrNothing

   15 Parameters: ParameterDeclaration
   16           | Parameters COMMA ParameterDeclaration

   17 ParameterDeclaration: IDENTIFIER COLON Type

   18 PrimitiveType: INTEGER
   19              | REAL
   20              | BOOLEAN

   21 Type: PrimitiveType
   22     | RecordType
   23     | ArrayType
   24     | IDENTIFIER

   25 RecordType: RECORD MultipleVariableDeclaration END

   26 MultipleVariableDeclaration: VariableDeclaration
   27                            | MultipleVariableDeclaration VariableDeclaration

   28 ArrayType: ARRAY LPAREN RPAREN Type
   29          | ARRAY LPAREN Expression RPAREN Type

   30 Body: Statement
   31     | SimpleDeclaration
   32     | RETURN Expression
   33     | Body Statement
   34     | Body SimpleDeclaration
   35     | Body Expression

   36 Statement: Assignment
   37          | RoutineCall
   38          | WhileLoop
   39          | ForLoop
   40          | IfStatement

   41 Assignment: ModifiablePrimary ASSIGN Expression

   42 RoutineCall: IDENTIFIER
   43            | IDENTIFIER LBRACKET ExpressionList RBRACKET

   44 ExpressionList: Expression
   45               | ExpressionList COMMA Expression

   46 WhileLoop: WHILE Expression LOOP Body END

   47 ForLoop: FOR IDENTIFIER Range LOOP Body END

   48 Range: IN Expression RANGE Expression
   49      | IN REVERSE Expression RANGE Expression

   50 IfStatement: IF Expression THEN Body END
   51            | IF Expression THEN Body ELSE Body END

   52 Expression: Relation
   53           | Relation OR Expression
   54           | Relation AND Expression
   55           | Relation XOR Expression

   56 Relation: Simple
   57         | Simple RelationOperand Simple

   58 RelationOperand: EQUALS
   59                | NOT_EQUAL
   60                | LESS_THAN
   61                | LESS_THAN_EQUAL
   62                | GREATER_THAN
   63                | GREATER_THAN_EQUAL

   64 Simple: Factor
   65       | Factor MULTIPLY Simple
   66       | Factor DIVIDE Simple
   67       | Factor MODULO Simple

   68 Factor: Summand
   69       | Summand Sign Factor

   70 Summand: Primary
   71        | LBRACKET Expression RBRACKET

   72 Primary: INTEGER_LITERAL
   73        | Sign INTEGER_LITERAL
   74        | NOT INTEGER_LITERAL
   75        | REAL_LITERAL
   76        | Sign REAL_LITERAL
   77        | BOOLEAN_LITERAL
   78        | ModifiablePrimary
   79        | RoutineCall

   80 Sign: PLUS
   81     | MINUS

   82 ModifiablePrimary: IDENTIFIER
   83                  | ModifiablePrimary DOT IDENTIFIER
   84                  | ModifiablePrimary LPAREN Expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    RETURN <value> (258) 14 32
    VAR <value> (259) 9 10 11
    TYPE <value> (260) 12
    IS <value> (261) 10 11 12 13 14
    ROUTINE <value> (262) 13 14
    END <value> (263) 13 14 25 46 47 50 51
    BOOL_LITERAL <value> (264)
    INTEGER <value> (265) 18
    REAL <value> (266) 19
    BOOLEAN <value> (267) 20
    RECORD <value> (268) 25
    ARRAY <value> (269) 28 29
    IN <value> (270) 48 49
    REVERSE <value> (271) 49
    LOOP <value> (272) 46 47
    FOR <value> (273) 47
    WHILE <value> (274) 46
    IF <value> (275) 50 51
    THEN <value> (276) 50 51
    ELSE <value> (277) 51
    AND <value> (278) 54
    OR <value> (279) 53
    XOR <value> (280) 55
    NOT <value> (281) 74
    IDENTIFIER <value> (282) 9 10 11 12 13 14 17 24 42 43 47 82 83
    INTEGER_LITERAL <value> (283) 72 73 74
    REAL_LITERAL <value> (284) 75 76
    STRING_LITERAL <value> (285)
    RANGE <value> (286) 48 49
    COMMA <value> (287) 16 45
    COLON <value> (288) 9 10 14 17
    SEMICOLON <value> (289) 8
    LPAREN <value> (290) 28 29 84
    RPAREN <value> (291) 28 29 84
    LBRACKET <value> (292) 13 14 43 71
    RBRACKET <value> (293) 13 14 43 71
    ASSIGN <value> (294) 41
    EQUALS <value> (295) 58
    NOT_EQUAL <value> (296) 59
    LESS_THAN <value> (297) 60
    LESS_THAN_EQUAL <value> (298) 61
    GREATER_THAN <value> (299) 62
    GREATER_THAN_EQUAL <value> (300) 63
    MULTIPLY <value> (301) 65
    DIVIDE <value> (302) 66
    MODULO <value> (303) 67
    INVALID_CHARACTER <value> (304)
    BOOLEAN_LITERAL <value> (305) 77
    PLUS <value> (306) 80
    MINUS <value> (307) 81
    DOT <value> (308) 83


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    Program <node> (55)
        on left: 1 2 3 4
        on right: 0 3 4
    SimpleDeclaration <node> (56)
        on left: 5 6
        on right: 1 3 31 34
    SemicolonOrNothing (57)
        on left: 7 8
        on right: 5 6 13 14
    VariableDeclaration <node> (58)
        on left: 9 10 11
        on right: 5 26 27
    TypeDeclaration <node> (59)
        on left: 12
        on right: 6
    RoutineDeclaration <node> (60)
        on left: 13 14
        on right: 2 4
    Parameters <node> (61)
        on left: 15 16
        on right: 13 14 16
    ParameterDeclaration <node> (62)
        on left: 17
        on right: 15 16
    PrimitiveType <node> (63)
        on left: 18 19 20
        on right: 21
    Type <node> (64)
        on left: 21 22 23 24
        on right: 9 10 12 14 17 28 29
    RecordType <node> (65)
        on left: 25
        on right: 22
    MultipleVariableDeclaration <node> (66)
        on left: 26 27
        on right: 25 27
    ArrayType <node> (67)
        on left: 28 29
        on right: 23
    Body <node> (68)
        on left: 30 31 32 33 34 35
        on right: 13 14 33 34 35 46 47 50 51
    Statement <node> (69)
        on left: 36 37 38 39 40
        on right: 30 33
    Assignment <node> (70)
        on left: 41
        on right: 36
    RoutineCall <node> (71)
        on left: 42 43
        on right: 37 79
    ExpressionList <node> (72)
        on left: 44 45
        on right: 43 45
    WhileLoop <node> (73)
        on left: 46
        on right: 38
    ForLoop <node> (74)
        on left: 47
        on right: 39
    Range <node> (75)
        on left: 48 49
        on right: 47
    IfStatement <node> (76)
        on left: 50 51
        on right: 40
    Expression <node> (77)
        on left: 52 53 54 55
        on right: 10 11 14 29 32 35 41 44 45 46 48 49 50 51 53 54 55 71 84
    Relation <node> (78)
        on left: 56 57
        on right: 52 53 54 55
    RelationOperand <value> (79)
        on left: 58 59 60 61 62 63
        on right: 57
    Simple <node> (80)
        on left: 64 65 66 67
        on right: 56 57 65 66 67
    Factor <node> (81)
        on left: 68 69
        on right: 64 65 66 67 69
    Summand <node> (82)
        on left: 70 71
        on right: 68 69
    Primary <node> (83)
        on left: 72 73 74 75 76 77 78 79
        on right: 70
    Sign <value> (84)
        on left: 80 81
        on right: 69 73 76
    ModifiablePrimary <node> (85)
        on left: 82 83 84
        on right: 41 78 83 84


State 0

    0 $accept: . Program $end

    VAR      shift, and go to state 1
    TYPE     shift, and go to state 2
    ROUTINE  shift, and go to state 3

    Program              go to state 4
    SimpleDeclaration    go to state 5
    VariableDeclaration  go to state 6
    TypeDeclaration      go to state 7
    RoutineDeclaration   go to state 8


State 1

    9 VariableDeclaration: VAR . IDENTIFIER COLON Type
   10                    | VAR . IDENTIFIER COLON Type IS Expression
   11                    | VAR . IDENTIFIER IS Expression

    IDENTIFIER  shift, and go to state 9


State 2

   12 TypeDeclaration: TYPE . IDENTIFIER IS Type

    IDENTIFIER  shift, and go to state 10


State 3

   13 RoutineDeclaration: ROUTINE . IDENTIFIER LBRACKET Parameters RBRACKET IS Body END SemicolonOrNothing
   14                   | ROUTINE . IDENTIFIER LBRACKET Parameters RBRACKET COLON Type IS Body RETURN Expression END SemicolonOrNothing

    IDENTIFIER  shift, and go to state 11


State 4

    0 $accept: Program . $end
    3 Program: Program . SimpleDeclaration
    4        | Program . RoutineDeclaration

    $end     shift, and go to state 12
    VAR      shift, and go to state 1
    TYPE     shift, and go to state 2
    ROUTINE  shift, and go to state 3

    SimpleDeclaration    go to state 13
    VariableDeclaration  go to state 6
    TypeDeclaration      go to state 7
    RoutineDeclaration   go to state 14


State 5

    1 Program: SimpleDeclaration .

    $default  reduce using rule 1 (Program)


State 6

    5 SimpleDeclaration: VariableDeclaration . SemicolonOrNothing

    SEMICOLON  shift, and go to state 15

    $default  reduce using rule 7 (SemicolonOrNothing)

    SemicolonOrNothing  go to state 16


State 7

    6 SimpleDeclaration: TypeDeclaration . SemicolonOrNothing

    SEMICOLON  shift, and go to state 15

    $default  reduce using rule 7 (SemicolonOrNothing)

    SemicolonOrNothing  go to state 17


State 8

    2 Program: RoutineDeclaration .

    $default  reduce using rule 2 (Program)


State 9

    9 VariableDeclaration: VAR IDENTIFIER . COLON Type
   10                    | VAR IDENTIFIER . COLON Type IS Expression
   11                    | VAR IDENTIFIER . IS Expression

    IS     shift, and go to state 18
    COLON  shift, and go to state 19


State 10

   12 TypeDeclaration: TYPE IDENTIFIER . IS Type

    IS  shift, and go to state 20


State 11

   13 RoutineDeclaration: ROUTINE IDENTIFIER . LBRACKET Parameters RBRACKET IS Body END SemicolonOrNothing
   14                   | ROUTINE IDENTIFIER . LBRACKET Parameters RBRACKET COLON Type IS Body RETURN Expression END SemicolonOrNothing

    LBRACKET  shift, and go to state 21


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    3 Program: Program SimpleDeclaration .

    $default  reduce using rule 3 (Program)


State 14

    4 Program: Program RoutineDeclaration .

    $default  reduce using rule 4 (Program)


State 15

    8 SemicolonOrNothing: SEMICOLON .

    $default  reduce using rule 8 (SemicolonOrNothing)


State 16

    5 SimpleDeclaration: VariableDeclaration SemicolonOrNothing .

    $default  reduce using rule 5 (SimpleDeclaration)


State 17

    6 SimpleDeclaration: TypeDeclaration SemicolonOrNothing .

    $default  reduce using rule 6 (SimpleDeclaration)


State 18

   11 VariableDeclaration: VAR IDENTIFIER IS . Expression

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Expression         go to state 31
    Relation           go to state 32
    Simple             go to state 33
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 19

    9 VariableDeclaration: VAR IDENTIFIER COLON . Type
   10                    | VAR IDENTIFIER COLON . Type IS Expression

    INTEGER     shift, and go to state 39
    REAL        shift, and go to state 40
    BOOLEAN     shift, and go to state 41
    RECORD      shift, and go to state 42
    ARRAY       shift, and go to state 43
    IDENTIFIER  shift, and go to state 44

    PrimitiveType  go to state 45
    Type           go to state 46
    RecordType     go to state 47
    ArrayType      go to state 48


State 20

   12 TypeDeclaration: TYPE IDENTIFIER IS . Type

    INTEGER     shift, and go to state 39
    REAL        shift, and go to state 40
    BOOLEAN     shift, and go to state 41
    RECORD      shift, and go to state 42
    ARRAY       shift, and go to state 43
    IDENTIFIER  shift, and go to state 44

    PrimitiveType  go to state 45
    Type           go to state 49
    RecordType     go to state 47
    ArrayType      go to state 48


State 21

   13 RoutineDeclaration: ROUTINE IDENTIFIER LBRACKET . Parameters RBRACKET IS Body END SemicolonOrNothing
   14                   | ROUTINE IDENTIFIER LBRACKET . Parameters RBRACKET COLON Type IS Body RETURN Expression END SemicolonOrNothing

    IDENTIFIER  shift, and go to state 50

    Parameters            go to state 51
    ParameterDeclaration  go to state 52


State 22

   74 Primary: NOT . INTEGER_LITERAL

    INTEGER_LITERAL  shift, and go to state 53


State 23

   42 RoutineCall: IDENTIFIER .
   43            | IDENTIFIER . LBRACKET ExpressionList RBRACKET
   82 ModifiablePrimary: IDENTIFIER .

    LBRACKET  shift, and go to state 54

    $end                reduce using rule 42 (RoutineCall)
    $end                [reduce using rule 82 (ModifiablePrimary)]
    RETURN              reduce using rule 42 (RoutineCall)
    RETURN              [reduce using rule 82 (ModifiablePrimary)]
    VAR                 reduce using rule 42 (RoutineCall)
    VAR                 [reduce using rule 82 (ModifiablePrimary)]
    TYPE                reduce using rule 42 (RoutineCall)
    TYPE                [reduce using rule 82 (ModifiablePrimary)]
    ROUTINE             reduce using rule 42 (RoutineCall)
    ROUTINE             [reduce using rule 82 (ModifiablePrimary)]
    END                 reduce using rule 42 (RoutineCall)
    END                 [reduce using rule 82 (ModifiablePrimary)]
    LOOP                reduce using rule 42 (RoutineCall)
    LOOP                [reduce using rule 82 (ModifiablePrimary)]
    FOR                 reduce using rule 42 (RoutineCall)
    FOR                 [reduce using rule 82 (ModifiablePrimary)]
    WHILE               reduce using rule 42 (RoutineCall)
    WHILE               [reduce using rule 82 (ModifiablePrimary)]
    IF                  reduce using rule 42 (RoutineCall)
    IF                  [reduce using rule 82 (ModifiablePrimary)]
    THEN                reduce using rule 42 (RoutineCall)
    THEN                [reduce using rule 82 (ModifiablePrimary)]
    ELSE                reduce using rule 42 (RoutineCall)
    ELSE                [reduce using rule 82 (ModifiablePrimary)]
    AND                 reduce using rule 42 (RoutineCall)
    AND                 [reduce using rule 82 (ModifiablePrimary)]
    OR                  reduce using rule 42 (RoutineCall)
    OR                  [reduce using rule 82 (ModifiablePrimary)]
    XOR                 reduce using rule 42 (RoutineCall)
    XOR                 [reduce using rule 82 (ModifiablePrimary)]
    NOT                 reduce using rule 42 (RoutineCall)
    NOT                 [reduce using rule 82 (ModifiablePrimary)]
    IDENTIFIER          reduce using rule 42 (RoutineCall)
    IDENTIFIER          [reduce using rule 82 (ModifiablePrimary)]
    INTEGER_LITERAL     reduce using rule 42 (RoutineCall)
    INTEGER_LITERAL     [reduce using rule 82 (ModifiablePrimary)]
    REAL_LITERAL        reduce using rule 42 (RoutineCall)
    REAL_LITERAL        [reduce using rule 82 (ModifiablePrimary)]
    RANGE               reduce using rule 42 (RoutineCall)
    RANGE               [reduce using rule 82 (ModifiablePrimary)]
    COMMA               reduce using rule 42 (RoutineCall)
    COMMA               [reduce using rule 82 (ModifiablePrimary)]
    SEMICOLON           reduce using rule 42 (RoutineCall)
    SEMICOLON           [reduce using rule 82 (ModifiablePrimary)]
    LPAREN              reduce using rule 82 (ModifiablePrimary)
    RPAREN              reduce using rule 42 (RoutineCall)
    RPAREN              [reduce using rule 82 (ModifiablePrimary)]
    LBRACKET            [reduce using rule 42 (RoutineCall)]
    LBRACKET            [reduce using rule 82 (ModifiablePrimary)]
    RBRACKET            reduce using rule 42 (RoutineCall)
    RBRACKET            [reduce using rule 82 (ModifiablePrimary)]
    ASSIGN              reduce using rule 82 (ModifiablePrimary)
    EQUALS              reduce using rule 42 (RoutineCall)
    EQUALS              [reduce using rule 82 (ModifiablePrimary)]
    NOT_EQUAL           reduce using rule 42 (RoutineCall)
    NOT_EQUAL           [reduce using rule 82 (ModifiablePrimary)]
    LESS_THAN           reduce using rule 42 (RoutineCall)
    LESS_THAN           [reduce using rule 82 (ModifiablePrimary)]
    LESS_THAN_EQUAL     reduce using rule 42 (RoutineCall)
    LESS_THAN_EQUAL     [reduce using rule 82 (ModifiablePrimary)]
    GREATER_THAN        reduce using rule 42 (RoutineCall)
    GREATER_THAN        [reduce using rule 82 (ModifiablePrimary)]
    GREATER_THAN_EQUAL  reduce using rule 42 (RoutineCall)
    GREATER_THAN_EQUAL  [reduce using rule 82 (ModifiablePrimary)]
    MULTIPLY            reduce using rule 42 (RoutineCall)
    MULTIPLY            [reduce using rule 82 (ModifiablePrimary)]
    DIVIDE              reduce using rule 42 (RoutineCall)
    DIVIDE              [reduce using rule 82 (ModifiablePrimary)]
    MODULO              reduce using rule 42 (RoutineCall)
    MODULO              [reduce using rule 82 (ModifiablePrimary)]
    BOOLEAN_LITERAL     reduce using rule 42 (RoutineCall)
    BOOLEAN_LITERAL     [reduce using rule 82 (ModifiablePrimary)]
    PLUS                reduce using rule 42 (RoutineCall)
    PLUS                [reduce using rule 82 (ModifiablePrimary)]
    MINUS               reduce using rule 42 (RoutineCall)
    MINUS               [reduce using rule 82 (ModifiablePrimary)]
    DOT                 reduce using rule 82 (ModifiablePrimary)
    $default            reduce using rule 42 (RoutineCall)


State 24

   72 Primary: INTEGER_LITERAL .

    $default  reduce using rule 72 (Primary)


State 25

   75 Primary: REAL_LITERAL .

    $default  reduce using rule 75 (Primary)


State 26

   71 Summand: LBRACKET . Expression RBRACKET

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Expression         go to state 55
    Relation           go to state 32
    Simple             go to state 33
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 27

   77 Primary: BOOLEAN_LITERAL .

    $default  reduce using rule 77 (Primary)


State 28

   80 Sign: PLUS .

    $default  reduce using rule 80 (Sign)


State 29

   81 Sign: MINUS .

    $default  reduce using rule 81 (Sign)


State 30

   79 Primary: RoutineCall .

    $default  reduce using rule 79 (Primary)


State 31

   11 VariableDeclaration: VAR IDENTIFIER IS Expression .

    $default  reduce using rule 11 (VariableDeclaration)


State 32

   52 Expression: Relation .
   53           | Relation . OR Expression
   54           | Relation . AND Expression
   55           | Relation . XOR Expression

    AND  shift, and go to state 56
    OR   shift, and go to state 57
    XOR  shift, and go to state 58

    $default  reduce using rule 52 (Expression)


State 33

   56 Relation: Simple .
   57         | Simple . RelationOperand Simple

    EQUALS              shift, and go to state 59
    NOT_EQUAL           shift, and go to state 60
    LESS_THAN           shift, and go to state 61
    LESS_THAN_EQUAL     shift, and go to state 62
    GREATER_THAN        shift, and go to state 63
    GREATER_THAN_EQUAL  shift, and go to state 64

    $default  reduce using rule 56 (Relation)

    RelationOperand  go to state 65


State 34

   64 Simple: Factor .
   65       | Factor . MULTIPLY Simple
   66       | Factor . DIVIDE Simple
   67       | Factor . MODULO Simple

    MULTIPLY  shift, and go to state 66
    DIVIDE    shift, and go to state 67
    MODULO    shift, and go to state 68

    $default  reduce using rule 64 (Simple)


State 35

   68 Factor: Summand .
   69       | Summand . Sign Factor

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29

    PLUS      [reduce using rule 68 (Factor)]
    MINUS     [reduce using rule 68 (Factor)]
    $default  reduce using rule 68 (Factor)

    Sign  go to state 69


State 36

   70 Summand: Primary .

    $default  reduce using rule 70 (Summand)


State 37

   73 Primary: Sign . INTEGER_LITERAL
   76        | Sign . REAL_LITERAL

    INTEGER_LITERAL  shift, and go to state 70
    REAL_LITERAL     shift, and go to state 71


State 38

   78 Primary: ModifiablePrimary .
   83 ModifiablePrimary: ModifiablePrimary . DOT IDENTIFIER
   84                  | ModifiablePrimary . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 72
    DOT     shift, and go to state 73

    $default  reduce using rule 78 (Primary)


State 39

   18 PrimitiveType: INTEGER .

    $default  reduce using rule 18 (PrimitiveType)


State 40

   19 PrimitiveType: REAL .

    $default  reduce using rule 19 (PrimitiveType)


State 41

   20 PrimitiveType: BOOLEAN .

    $default  reduce using rule 20 (PrimitiveType)


State 42

   25 RecordType: RECORD . MultipleVariableDeclaration END

    VAR  shift, and go to state 1

    VariableDeclaration          go to state 74
    MultipleVariableDeclaration  go to state 75


State 43

   28 ArrayType: ARRAY . LPAREN RPAREN Type
   29          | ARRAY . LPAREN Expression RPAREN Type

    LPAREN  shift, and go to state 76


State 44

   24 Type: IDENTIFIER .

    $default  reduce using rule 24 (Type)


State 45

   21 Type: PrimitiveType .

    $default  reduce using rule 21 (Type)


State 46

    9 VariableDeclaration: VAR IDENTIFIER COLON Type .
   10                    | VAR IDENTIFIER COLON Type . IS Expression

    IS  shift, and go to state 77

    $default  reduce using rule 9 (VariableDeclaration)


State 47

   22 Type: RecordType .

    $default  reduce using rule 22 (Type)


State 48

   23 Type: ArrayType .

    $default  reduce using rule 23 (Type)


State 49

   12 TypeDeclaration: TYPE IDENTIFIER IS Type .

    $default  reduce using rule 12 (TypeDeclaration)


State 50

   17 ParameterDeclaration: IDENTIFIER . COLON Type

    COLON  shift, and go to state 78


State 51

   13 RoutineDeclaration: ROUTINE IDENTIFIER LBRACKET Parameters . RBRACKET IS Body END SemicolonOrNothing
   14                   | ROUTINE IDENTIFIER LBRACKET Parameters . RBRACKET COLON Type IS Body RETURN Expression END SemicolonOrNothing
   16 Parameters: Parameters . COMMA ParameterDeclaration

    COMMA     shift, and go to state 79
    RBRACKET  shift, and go to state 80


State 52

   15 Parameters: ParameterDeclaration .

    $default  reduce using rule 15 (Parameters)


State 53

   74 Primary: NOT INTEGER_LITERAL .

    $default  reduce using rule 74 (Primary)


State 54

   43 RoutineCall: IDENTIFIER LBRACKET . ExpressionList RBRACKET

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    ExpressionList     go to state 81
    Expression         go to state 82
    Relation           go to state 32
    Simple             go to state 33
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 55

   71 Summand: LBRACKET Expression . RBRACKET

    RBRACKET  shift, and go to state 83


State 56

   54 Expression: Relation AND . Expression

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Expression         go to state 84
    Relation           go to state 32
    Simple             go to state 33
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 57

   53 Expression: Relation OR . Expression

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Expression         go to state 85
    Relation           go to state 32
    Simple             go to state 33
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 58

   55 Expression: Relation XOR . Expression

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Expression         go to state 86
    Relation           go to state 32
    Simple             go to state 33
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 59

   58 RelationOperand: EQUALS .

    $default  reduce using rule 58 (RelationOperand)


State 60

   59 RelationOperand: NOT_EQUAL .

    $default  reduce using rule 59 (RelationOperand)


State 61

   60 RelationOperand: LESS_THAN .

    $default  reduce using rule 60 (RelationOperand)


State 62

   61 RelationOperand: LESS_THAN_EQUAL .

    $default  reduce using rule 61 (RelationOperand)


State 63

   62 RelationOperand: GREATER_THAN .

    $default  reduce using rule 62 (RelationOperand)


State 64

   63 RelationOperand: GREATER_THAN_EQUAL .

    $default  reduce using rule 63 (RelationOperand)


State 65

   57 Relation: Simple RelationOperand . Simple

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Simple             go to state 87
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 66

   65 Simple: Factor MULTIPLY . Simple

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Simple             go to state 88
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 67

   66 Simple: Factor DIVIDE . Simple

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Simple             go to state 89
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 68

   67 Simple: Factor MODULO . Simple

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Simple             go to state 90
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 69

   69 Factor: Summand Sign . Factor

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Factor             go to state 91
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 70

   73 Primary: Sign INTEGER_LITERAL .

    $default  reduce using rule 73 (Primary)


State 71

   76 Primary: Sign REAL_LITERAL .

    $default  reduce using rule 76 (Primary)


State 72

   84 ModifiablePrimary: ModifiablePrimary LPAREN . Expression RPAREN

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Expression         go to state 92
    Relation           go to state 32
    Simple             go to state 33
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 73

   83 ModifiablePrimary: ModifiablePrimary DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 93


State 74

   26 MultipleVariableDeclaration: VariableDeclaration .

    $default  reduce using rule 26 (MultipleVariableDeclaration)


State 75

   25 RecordType: RECORD MultipleVariableDeclaration . END
   27 MultipleVariableDeclaration: MultipleVariableDeclaration . VariableDeclaration

    VAR  shift, and go to state 1
    END  shift, and go to state 94

    VariableDeclaration  go to state 95


State 76

   28 ArrayType: ARRAY LPAREN . RPAREN Type
   29          | ARRAY LPAREN . Expression RPAREN Type

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    RPAREN           shift, and go to state 96
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Expression         go to state 97
    Relation           go to state 32
    Simple             go to state 33
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 77

   10 VariableDeclaration: VAR IDENTIFIER COLON Type IS . Expression

    NOT              shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    INTEGER_LITERAL  shift, and go to state 24
    REAL_LITERAL     shift, and go to state 25
    LBRACKET         shift, and go to state 26
    BOOLEAN_LITERAL  shift, and go to state 27
    PLUS             shift, and go to state 28
    MINUS            shift, and go to state 29

    RoutineCall        go to state 30
    Expression         go to state 98
    Relation           go to state 32
    Simple             go to state 33
    Factor             go to state 34
    Summand            go to state 35
    Primary            go to state 36
    Sign               go to state 37
    ModifiablePrimary  go to state 38


State 78
